--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "e-commerce-website",
+  "name": "Netflix-clone",
+  "homepage": "https://Sakshibansall.github.io/Netflix-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
