--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_TMDB_API_KEY=a8296df765a2599a9567c58cab9e75b2
+VITE_BASE_URL = "https://api.themoviedb.org/3"
+VITE_IMG_URL = "https://image.tmdb.org/t/p/w1280"
